fix: css and team website not showing when isMobile

--- a/src/components/clients/index.scss
+++ b/src/components/clients/index.scss
@@ -67,11 +67,20 @@
 
     @media (max-width: 1280px) {
       justify-content: center;
+      gap: 16px;
     }
   }
 
   &__item {
     cursor: pointer;
+
+    @media (max-width: 1280px) {
+      max-width: calc(50% - 12px);
+      img {
+        max-width: 100%;
+      }
+    }
+
   }
 
   &__button {
@@ -87,6 +96,10 @@
     text-align: center;
     border: none;
     cursor: pointer;
+
+    @media (max-width: 1280px) {
+      font-size: 16px;
+    }
   }
 
   &__more-clients {
@@ -112,7 +125,8 @@
     }
 
     @media (max-width: 768px) {
-      gap: 24px;
+      gap: 0px;
+      margin-bottom: 40px;
     }
   }
 }
