--- a/src/components/services/index.scss
+++ b/src/components/services/index.scss
@@ -53,6 +53,7 @@
 
     @media (max-width: 768px) {
       max-width: 100%;
+      margin: 0px 0px 32px;
     }
 
     &--big {
